<resources>
    <string name="app_name">CST2335</string>
    <string name="Hello_message">Hello World!</string>
    <string name="button_message">iam a button</string>
    <string name="editmessage">I\'m an EditText</string>
    <string name="hinttext">Write something here</string>
    <string name="CheckBox">Do you drink coffee?</string>
    <string name="Switch">Do you drink coffee?</string>
    <string name="RadioButton">Do you drink coffee?</string>

</resources>